docs: clarify restart session warning in colab notebook

--- a/backend/colab_backend.ipynb
+++ b/backend/colab_backend.ipynb
@@ -8,9 +8,13 @@
                 "\n",
                 "This notebook runs the backend on a free Google Colab GPU (T4) and exposes it via ngrok.\n",
                 "\n",
-                "## Instructions:\n",
-                "1. Requires an Ngrok Authtoken (free account at [ngrok.com](https://dashboard.ngrok.com/get-started/your-authtoken))\n",
-                "2. Copy your token and paste it when prompted below."
+                "## Quick Start:\n",
+                "1. **Runtime Type**: Ensure you are using a GPU Runtime (Runtime > Change runtime type > T4 GPU).\n",
+                "2. **Ngrok Token**: You need a free account at [ngrok.com](https://dashboard.ngrok.com/get-started/your-authtoken).\n",
+                "\n",
+                "> **⚠️ IMPORTANT**: During installation (Step 3), Colab might ask you to **\"Restart session\"**. \n",
+                "> This is **NORMAL**. Click **\"Restart session\"**, then run the cells again. \n",
+                "> (The installation cell might show errors about 'dependency resolver' - you can ignore these generally as long as our app works)."
             ]
         },
         {
@@ -41,6 +45,8 @@
             "outputs": [],
             "source": [
                 "# 3. Install Python Dependencies\n",
+                "# NOTE: This may downgrade NumPy and ask for a session restart. \n",
+                "# If asked, click 'Restart session', then run this cell again (it will be fast) and proceed.\n",
                 "!pip install -r requirements.txt\n",
                 "!pip install pyngrok uvicorn nest_asyncio"
             ]
@@ -52,8 +58,8 @@
             "outputs": [],
             "source": [
                 "# 4. Install PixelHacker Dependencies (Optional - for high quality model)\n",
-                "# Note: This might downgrade some packages, but it's usually fine in Colab\n",
-                "!pip install diffusers==0.30.2 transformers==4.40.0 accelerate==0.34.0 peft"
+                "# Uncomment the lines below if you want to use the PixelHacker model\n",
+                "# !pip install diffusers==0.30.2 transformers==4.40.0 accelerate==0.34.0 peft"
             ]
         },
         {
@@ -74,7 +80,10 @@
                 "\n",
                 "# Get Ngrok Token\n",
                 "print(\"Please enter your Ngrok Authtoken (from https://dashboard.ngrok.com/get-started/your-authtoken):\")\n",
-                "token = getpass.getpass('Ngrok Authtoken: ')\n",
+                "try:\n",
+                "    token = getpass.getpass('Ngrok Authtoken: ')\n",
+                "except Exception as e:\n",
+                "    token = input(\"Ngrok Authtoken: \")\n",
                 "\n",
                 "if token:\n",
                 "    conf.get_default().auth_token = token\n",
@@ -87,13 +96,7 @@
                 "    print(f\"\\n\\n🚀 Backend is running! Copy this URL into your Frontend ENV or Code: {public_url}\\n\\n\")\n",
                 "    \n",
                 "    # Run the server\n",
-                "    # Note: We import main here to run it via python, assuming main.py is in current dir\n",
-                "    # If main.py expects to be run as a module, we might need adjustments.\n",
-                "    # But for simplicity, we can just run uvicorn programmatically.\n",
-                "    \n",
-                "    # To ensure imports work correctly, we append the path\n",
                 "    sys.path.append('.')\n",
-                "    \n",
                 "    # Run Uvicorn\n",
                 "    uvicorn.run(\"main:app\", host=\"127.0.0.1\", port=8000)\n",
                 "else:\n",
