fix(colab): resolve ModuleNotFoundError by importing app explicitly

--- a/backend/colab_backend.ipynb
+++ b/backend/colab_backend.ipynb
@@ -70,10 +70,12 @@
             "source": [
                 "# 5. Setup Ngrok & Run Server\n",
                 "import getpass\n",
+                "import os\n",
+                "import sys\n",
                 "from pyngrok import ngrok, conf\n",
                 "import nest_asyncio\n",
                 "import uvicorn\n",
-                "import sys\n",
+                "import threading\n",
                 "\n",
                 "# Patch asyncio for Colab\n",
                 "nest_asyncio.apply()\n",
@@ -95,10 +97,24 @@
                 "    public_url = ngrok.connect(8000)\n",
                 "    print(f\"\\n\\n🚀 Backend is running! Copy this URL into your Frontend ENV or Code: {public_url}\\n\\n\")\n",
                 "    \n",
-                "    # Run the server\n",
+                "    # Ensure we are in the backend directory\n",
+                "    if os.path.basename(os.getcwd()) != 'backend':\n",
+                "        if os.path.exists('cleanup-image/backend'):\n",
+                "            os.chdir('cleanup-image/backend')\n",
+                "        elif os.path.exists('backend'):\n",
+                "            os.chdir('backend')\n",
+                "            \n",
                 "    sys.path.append('.')\n",
-                "    # Run Uvicorn\n",
-                "    uvicorn.run(\"main:app\", host=\"127.0.0.1\", port=8000)\n",
+                "    \n",
+                "    # IMPORT APP DIRECTLY to avoid 'ModuleNotFoundError: No module named main'\n",
+                "    # Use a try-except block to catch import errors early\n",
+                "    try:\n",
+                "        from main import app\n",
+                "        uvicorn.run(app, host=\"127.0.0.1\", port=8000)\n",
+                "    except ImportError as e:\n",
+                "        print(f\"❌ Error importing main.py: {e}\")\n",
+                "        print(f\"Current working directory: {os.getcwd()}\")\n",
+                "        print(f\"Directory contents: {os.listdir('.')}\")\n",
                 "else:\n",
                 "    print(\"❌ Error: Ngrok token is required to expose the server.\")"
             ]
