fix(colab): run uvicorn in subprocess to avoid event loop conflicts

--- a/backend/colab_backend.ipynb
+++ b/backend/colab_backend.ipynb
@@ -72,13 +72,8 @@
                 "import getpass\n",
                 "import os\n",
                 "import sys\n",
+                "import subprocess\n",
                 "from pyngrok import ngrok, conf\n",
-                "import nest_asyncio\n",
-                "import uvicorn\n",
-                "import threading\n",
-                "\n",
-                "# Patch asyncio for Colab\n",
-                "nest_asyncio.apply()\n",
                 "\n",
                 "# Get Ngrok Token\n",
                 "print(\"Please enter your Ngrok Authtoken (from https://dashboard.ngrok.com/get-started/your-authtoken):\")\n",
@@ -103,18 +98,20 @@
                 "            os.chdir('cleanup-image/backend')\n",
                 "        elif os.path.exists('backend'):\n",
                 "            os.chdir('backend')\n",
-                "            \n",
-                "    sys.path.append('.')\n",
                 "    \n",
-                "    # IMPORT APP DIRECTLY to avoid 'ModuleNotFoundError: No module named main'\n",
-                "    # Use a try-except block to catch import errors early\n",
+                "    print(f\"Running server in directory: {os.getcwd()}\")\n",
+                "    \n",
+                "    # Run Uvicorn as a SUBPROCESS to avoid event loop conflicts in Colab\n",
+                "    # This isolates the server process from the notebook's asyncio loop\n",
+                "    cmd = [sys.executable, \"-m\", \"uvicorn\", \"main:app\", \"--host\", \"127.0.0.1\", \"--port\", \"8000\"]\n",
+                "    \n",
                 "    try:\n",
-                "        from main import app\n",
-                "        uvicorn.run(app, host=\"127.0.0.1\", port=8000)\n",
-                "    except ImportError as e:\n",
-                "        print(f\"❌ Error importing main.py: {e}\")\n",
-                "        print(f\"Current working directory: {os.getcwd()}\")\n",
-                "        print(f\"Directory contents: {os.listdir('.')}\")\n",
+                "        # subprocess.run will block this cell and stream output to the console\n",
+                "        subprocess.run(cmd, check=True)\n",
+                "    except KeyboardInterrupt:\n",
+                "        print(\"Server stopped by user.\")\n",
+                "    except Exception as e:\n",
+                "        print(f\"❌ Error running server: {e}\")\n",
                 "else:\n",
                 "    print(\"❌ Error: Ngrok token is required to expose the server.\")"
             ]
