feat(web): add high quality SDXL model support

--- a/backend/colab_backend.ipynb
+++ b/backend/colab_backend.ipynb
@@ -57,9 +57,9 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# 4. Install PixelHacker Dependencies (Optional - for high quality model)\n",
-                "# Uncomment the lines below if you want to use the PixelHacker model\n",
-                "# !pip install diffusers==0.30.2 transformers==4.40.0 accelerate==0.34.0 peft"
+                "# 4. Install High-Quality Model Dependencies (Optional - for SDXL)\n",
+                "# Uncomment the lines below if you want to use the SDXL High-Quality Model\n",
+                "!pip install diffusers==0.26.0 transformers accelerate invisible_watermark"
             ]
         },
         {
@@ -87,7 +87,7 @@
                 "    \n",
                 "    # Kill existing tunnels\n",
                 "    ngrok.kill()\n",
-                "\n",
+                "    \n",
                 "    # Start tunnel\n",
                 "    public_url = ngrok.connect(8000)\n",
                 "    print(f\"\\n\\n🚀 Backend is running! Copy this URL into your Frontend ENV or Code: {public_url}\\n\\n\")\n",
